--- a/style.css
+++ b/style.css
@@ -18,20 +18,21 @@ body {
 
 /* Video Container */
 #virusScan {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1000;
+  background: black;
 }
 
 #virusScan video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
 }
-
 /* Scam Alert Page */
 #scamAlert {
     position: fixed;
